<resources>

    <!-- Application string -->
    <string name="app_name">AndroidProgrammingDefinitiveGuideSample</string>
    <string name="action_settings">Settings</string>
    <string name="GeoQuiz">GeoQuiz</string>
    <string name="CriminalIntent">CriminalIntent</string>
    <string name="HelloMoon">HelloMoon</string>
    <string name="NerdLauncher">NerdLauncher</string>
    <string name="RemoteControl">RemoteControl</string>
    <string name="PhotoGallery">PhotoGallery</string>
    <string name="DragAndDraw">DragAndDraw</string>
    <string name="RunTracker">RunTracker</string>

    <!-- GeoQuiz string -->
    <string name="question_text">Constantinople is the largest city int Turkey</string>
    <string name="true_button">True</string>
    <string name="false_button">false</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connect the Red Sea and the India Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="question_tips">This is the first question.</string>
    <string name="cheat_button">Cheat!</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="api_level">API level &#160;</string>

    <!-- CrimeIntent -->
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">TITLE</string>
    <string name="crime_title">Crimes</string>
    <string name="crime_details_label">DETAILS</string>
    <string name="crime_solved_label">Solved</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle">If you see something, say something.</string>
    <string name="delete_crime">Delete</string>
    <string name="take">Take!</string>

    <!-- HelloMoon -->
    <string name="helloMoon_play">Play</string>
    <string name="helloMoon_stop">Stop</string>
    <string name="helloMoon_description">Neil Armstrong stepping onto the moon</string>
</resources>
